# qtrader

./: CMakeLists.txt
src/: CMakeLists.txt
src/abstract/: datatypes.h  engineabstract.cpp  engineabstract.h  gatewayabstract.cpp  gatewayabstract.h  strategyabstract.cpp  strategyabstract.h
src/app/: sinadatatypes.cpp  sinadatatypes.h  sinagateway.cpp  sinagateway.h  sinagateway_p.h
src/apps/: CMakeLists.txt  sinarecorder.cpp
src/core/: defaultengine.cpp  defaultengine.h  defaultengine_p.h  recordstrategy.cpp  recordstrategy.h  recordstrategy_p.h  riskmanager.cpp  riskmanager.h  strategy.cpp  strategy.h
src/extension/: sinadatatypes.cpp  sinadatatypes.h  sinagateway.cpp  sinagateway.h  sinagateway_p.h
